fix logo text on mobile

--- a/recruit/sass/style-narrower.scss
+++ b/recruit/sass/style-narrower.scss
@@ -32,7 +32,7 @@
 /* Section/Article */
 
 	section {
-		margin: 1em 0 1em 0;
+		/* margin: 1em 0 1em 0; */
 
 		&:first-child {
 			margin-top: 0;
